--- a/apps/docs/content/components/FormControl.mdx
+++ b/apps/docs/content/components/FormControl.mdx
@@ -1,5 +1,5 @@
 ---
-title: FormControl
+title: Form control
 status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1793%3A27781'
 source: https://github.com/primer/brand/blob/main/packages/react/src/forms/FormControl/FormControl.tsx
