--- a/apps/docs/content/components/CTABanner.mdx
+++ b/apps/docs/content/components/CTABanner.mdx
@@ -1,10 +1,10 @@
 ---
-title: CTABanner
+title: CTA banner
 status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=539%3A14285&t=RJEWZhVUtrRQ0pKh-0
 source: https://github.com/primer/brand/blob/main/packages/react/src/CTABanner/CTABanner.tsx
 storybook: '/brand/storybook/?path=/story/components-ctabanner--playground'
-description: Use CTABanner to draw attention to or create urgency around a user action.
+description: Use CTA banner to draw attention to or create urgency around a user action.
 ---
 
 import {Label} from '@primer/react'
