--- a/apps/docs/content/components/SubdomainNavBar.mdx
+++ b/apps/docs/content/components/SubdomainNavBar.mdx
@@ -1,5 +1,5 @@
 ---
-title: SubdomainNavBar
+title: Subdomain nav bar
 status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1024%3A32796
 source: https://github.com/primer/brand/blob/main/packages/react/src/SubdomainNavBar/SubdomainNavBar.tsx
