--- a/apps/docs/content/components/TextInput.mdx
+++ b/apps/docs/content/components/TextInput.mdx
@@ -1,5 +1,5 @@
 ---
-title: TextInput
+title: Text input
 status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1377%3A30676'
 source: https://github.com/primer/brand/blob/main/packages/react/src/forms/TextInput/TextInput.tsx
