--- a/apps/docs/content/components/UnorderedList.mdx
+++ b/apps/docs/content/components/UnorderedList.mdx
@@ -1,10 +1,10 @@
 ---
-title: UnorderedList
+title: Unordered list
 status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/branch/NzBMPIfPrFU9I87d3k7KVq/Primer-Brand?node-id=4045%3A17093&t=XJ9W58VgtbVo74gb-0'
 source: https://github.com/primer/brand/tree/main/packages/react/src/list/UnorderedList/UnorderedList.tsx
 storybook: '/brand/storybook/?path=/story/components-unorderedlist--default'
-description: Use the UnorderedList component to render a list of unordered items.
+description: Use the unordered list component to render a list of unordered items.
 ---
 
 ```js
