--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -19,9 +19,7 @@ export default ComponentLayout
 
 Use the hero component to provide a title, description and actions to introduce the main content of a page. The hero component is designed to be positioned at the top of a page and spans the full width of the viewport.
 
-### Heading and description
-
-The hero heading should be used to introduce the main content of the page, the description should provide more context. Both heading and description should be short and descriptive, and should not be longer than 2 lines for the heading, and 3-4 lines for the description.
+Both heading and description of the hero should be short and descriptive. Heading should be not be longer than 2 lines, and description should be no longer than 3-4 lines.
 
 The hero component is not designed to be used as a banner or advertisement, or to provide a lot of information to the user. Consider using other components, such as the [section intro](/components/SectionIntro) or the [river](/components/River) instead.
 
