--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -25,6 +25,8 @@ The hero component is not designed to be used as a banner or advertisement, or t
 
 The hero heading is rendered as an `h1` element by default. You can modify the heading level but be aware that this will affect the page's heading structure and may impact accessibility. [See heading accesibility](/components/Heading#accessibility) for more information.
 
+The hero can optionally include primary and secondary actions. These actions are rendered as a [button group](/components/ButtonGroup) and follow the same guidelines as the button group component.
+
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/e1792455-f008-45fd-9dd6-7330bc58c03c" />
@@ -63,10 +65,6 @@ Hero elements can be aligned to the start or center of the page. By default, the
     </Caption>
   </Dont>
 </DoDontContainer>
-
-### Actions
-
-The hero can optionally include primary and secondary actions. These actions are rendered as a [button group](/components/ButtonGroup) and follow the same rules as the button group component.
 
 ## Related components
 
