--- a/apps/docs/content/components/SectionIntro/react.mdx
+++ b/apps/docs/content/components/SectionIntro/react.mdx
@@ -1,11 +1,14 @@
 ---
-title: SectionIntro
+title: Section intro
 status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=3891%3A17104&t=j6zvLXblgsO36Wmu-11
 source: https://github.com/primer/brand/blob/main/packages/react/src/SectionIntro/SectionIntro.tsx
 storybook: '/brand/storybook/?path=/story/components-SectionIntro--playground'
-description: Use SectionIntro to provide a title, optional description and link to a new section in the page.
+description: Use section intro to provide a title, optional description and link to a new section in the page.
 ---
+
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
 
 import {Label} from '@primer/react'
 
