--- a/apps/docs/content/components/CTABanner/index.mdx
+++ b/apps/docs/content/components/CTABanner/index.mdx
@@ -8,7 +8,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image showing the CTA banner anatomy with a heading, a description and a button group.]()
+![An image showing the CTA banner anatomy with a heading, a description and a button group.](https://github.com/primer/brand/assets/912236/779c909d-21eb-42b8-b3dd-963e0113102c)
 
 - Heading: The main title of the Pillar. It should be short and concise.
 - Description: Short text that extends the information provided by the heading.
@@ -16,7 +16,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use CTA banner to draw attention around the main user actions. The CTA banner should be used sparingly, and is typically placed at the bottom of the page to close the user journey,
+Use the CTA banner to draw attention around the main user actions. The CTA banner should be used sparingly, and is typically placed at the bottom of the page to close the user journey,
 make a short summary of the page, and to persist the main actions. The CTA banner can also be used between other sections on lengthy pages.
 
 The CTA banner can include primary and secondary actions. These actions are rendered as a [button group](/components/ButtonGroup) and follow the same guidelines as the button group component.
@@ -25,15 +25,17 @@ The actions used in a CTA banner are normally the same as the ones used on the [
 
 <DoDontContainer>
   <Do>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/952c6855-139b-42c1-a5df-ae3574c02f3c" />
     <Caption>
-      Use the CTA banner on the bottom of the page to close the user journey.
+      Use the CTA banner on the bottom of the page to close the user journey and
+      reinforce the main actions.
     </Caption>
   </Do>
   <Dont>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/389a4458-a558-4f8f-9656-d1aa51c82b3e" />
     <Caption>
-      Don't use the CTA early on the user journey, use a hero component instead.
+      Don't use the CTA early on the user journey, use a hero or a section intro
+      component instead.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -52,13 +54,13 @@ The CTA banner uses a solid background color by default. This is the recommended
 
 <DoDontContainer>
   <Do>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/1a142793-0293-4fdd-8eca-a99c8325e340" />
     <Caption>
       Use the background by default to ensure that the content is legible.
     </Caption>
   </Do>
   <Dont>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/4d49b984-7baa-4f9e-a1f6-d4214640a4f7" />
     <Caption>
       Don't remove the background and keep the shadow, it will make the content
       hard to read.
@@ -72,18 +74,19 @@ The CTA banner has a shadow around the component to give it a sense of depth and
 
 <DoDontContainer>
   <Do>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/22ccf3b3-7bed-4997-9b28-4d0d298386ac" />
     <Caption>
-      Remove the shadow to diminish the sense of depth and separation from the
-      background or to allow the content to blend with the background of the
-      page.
+      Remove the shadow and the background to diminish the sense of depth and
+      separation from the background or to allow the content to blend with the
+      background of the page.
     </Caption>
   </Do>
   <Dont>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/a87c2851-41f4-41c5-810a-47b6270b1173" />
     <Caption>
-      Don't use the shadow if you want the content to blend with the background
-      and the sections that sorround the CTA banner.
+      Don't use the shadow and the background together if you want the content
+      to blend with the background and the sections that sorround the CTA
+      banner.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -94,13 +97,13 @@ The CTA banner can render a border around the component giving further separatio
 
 <DoDontContainer>
   <Do>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/a50c6341-6794-4e94-84bb-5351aad58151" />
     <Caption>
       Use the border only when there is no shadow present on the background.
     </Caption>
   </Do>
   <Dont>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/16d47d54-6d42-495b-975e-286cf3c73660" />
     <Caption>
       Don't use the border when there is a shadow present on the background. The
       shadow will provide enough separation between the foreground and
