--- a/apps/docs/content/components/Testimonial/react.mdx
+++ b/apps/docs/content/components/Testimonial/react.mdx
@@ -4,11 +4,14 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1852%3A27522'
 source: https://github.com/primer/brand/blob/main/packages/react/src/Testimonial/Testimonial.tsx
 storybook: '/brand/storybook/?path=/story/components-Testimonial--scale'
-description: Use Testimonial to display a quote from a customer or user.
+description: Use testimonial to display a quote from a customer or user.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {Box as Container, Label} from '@primer/react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 
 ```js
 import {Testimonial} from '@primer/react-brand'
