--- a/apps/docs/content/components/Testimonial/index.mdx
+++ b/apps/docs/content/components/Testimonial/index.mdx
@@ -8,12 +8,12 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image displaying a testimonial anatomy.](https://github.com/primer/brand/assets/912236/d9854082-76b6-4c8a-8606-4ce67e2faba0)
+![An image displaying a testimonial anatomy.](https://github.com/primer/brand/assets/912236/c9348fc5-36f4-40f8-a1ec-60bd84d37535)
 
 - Quote: The quote from the customer.
 - Name: The name of the customer.
 - Position: The position or role of the customer.
-- Avatar: Optional avatar of the customer.
+- Avatar or Logo: Optional avatar of the customer or the company logo.
 
 ## Usage
 
@@ -34,12 +34,14 @@ Testimonials should be short and concise. Avoid using long or short quotes that 
   </Dont>
 </DoDontContainer>
 
-Avatars are optional and can be used to provide more context about the customer. When using an avatar, use an image of the customer to make the testimonial more personal and provide more credibility. If an image is not available, use a logo or similar visual that represents the customer company or organization.
+Avatars and logos are optional and can be used to provide more context about the customer or the company. When using an avatar, use an image of the customer to make the testimonial more personal and provide more credibility. If an image is not available, use a logo or similar visual that represents the customer company or organization.
 
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/8968b579-1ff6-490e-a5a2-2abd2da588e5" />
-    <Caption>Use a real life image of the customer or user.</Caption>
+    <Caption>
+      Use a real life image of the customer or the logo of the company.
+    </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/bcda5e31-1ccc-44a5-9d65-2f6aad326f4b" />
@@ -134,7 +136,7 @@ The testimonial component uses the small size by default. Use the large size to 
     <img src="https://github.com/primer/brand/assets/912236/136e559e-aa04-4814-99f7-f1f722ebb8e6" />
     <Caption>
       Don't use the large size in single row groups, even if the content is
-      short. Stack them vertically in 2 columns instead.
+      short. Stack them vertically and use 2 columns instead.
     </Caption>
   </Dont>
 </DoDontContainer>
