More logo content

--- a/apps/docs/content/components/Testimonial/index.mdx
+++ b/apps/docs/content/components/Testimonial/index.mdx
@@ -52,7 +52,7 @@ Avatars and logos are optional and can be used to provide more context about the
   </Dont>
 </DoDontContainer>
 
-Testimonials can be used individually or in a group. When using a group of testimonials, use the same size and alignment for all of them. When including an avatar, use it in all of them and keep the same style and size. E,g, if using the company logo, use it in all of them. We recommend using a maximum of 4 testimonials per group to avoid visual noise and to keep the quotes relevant.
+Testimonials can be used individually or in a group. When using a group of testimonials, use the same size and alignment for all of them. When including an avatar or a logo, use it in all of them and keep the same style and size, and don't alternate between logos and avatars. We recommend using a maximum of 4 testimonials per group to avoid visual noise and to keep the quotes relevant.
 
 <DoDontContainer stacked>
   <Do>
@@ -65,13 +65,13 @@ Testimonials can be used individually or in a group. When using a group of testi
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/ed834a59-65e9-4933-a9c7-ace37843c7a6" />
     <Caption>
-      Don't use different sizes, alignments or avatars for groups of
-      testimonials.
+      Don't use different sizes, alignments or alternate avatars and logos for
+      groups of testimonials.
     </Caption>
   </Dont>
 </DoDontContainer>
 
-Use a single testimonial to highlight a specific feature or benefit of the product. Avoid using multiple testimonials to showcase the same feature or benefit.
+Use a single testimonial to highlight a specific feature or benefit of the product. Use multiple testimonials to showcase each feature when in a list or a [river](/components/River).
 
 <DoDontContainer>
   <Do>
