--- a/apps/docs/content/components/OrderedList/react.mdx
+++ b/apps/docs/content/components/OrderedList/react.mdx
@@ -7,6 +7,9 @@ storybook: '/brand/storybook/?path=/story/components-orderedlist--default'
 description: Use the ordered list component to render a list of ordered items.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 ```js
 import {OrderedList} from '@primer/react-brand'
 ```
