--- a/apps/docs/content/components/UnorderedList/react.mdx
+++ b/apps/docs/content/components/UnorderedList/react.mdx
@@ -7,6 +7,9 @@ storybook: '/brand/storybook/?path=/story/components-unorderedlist--default'
 description: Use the unordered list component to render a list of unordered items.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 ```js
 import {UnorderedList} from '@primer/react-brand'
 ```
