Add unordered list examples

--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -8,7 +8,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image showing an unordered list with different bullet points.]()
+![An image showing an unordered list with different bullet points.](https://github.com/primer/brand/assets/912236/646a4719-dddf-47f5-9b34-85f6addb828e)
 
 ## Usage
 
@@ -18,16 +18,34 @@ Use the unordered list to effectively provide a quick reference or highlight key
 
 <DoDontContainer>
   <Do>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/3893c4f5-2ae8-4ca8-a23f-f76dd02de752" />
     <Caption>
       Use an unordered list to present and group a list of items that don't
       require a specific order.
     </Caption>
   </Do>
   <Dont>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/8c2399a3-3b1b-4b7a-b917-f14499eefd9d" />
     <Caption>
       Don't use an unordered list to present a sequence of steps.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
+The unordered list should have conscise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/River), a [card](/components/Card) or a [river](/components/River) instead.
+
+<DoDontContainer>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/e4f81d21-86b9-41dc-9aa5-b4ee17f9ac8d" />
+    <Caption>
+      Use an unordered list for short and concise content items.
+    </Caption>
+  </Do>
+  <Dont>
+    <img src="https://github.com/primer/brand/assets/912236/b656a10c-4e2f-4600-9a1f-46a1f4cdd98c" />
+    <Caption>
+      Don't use an unordered list for long and rich sentences, paragraphs,
+      headings or links. Use a pillar, card or river components instead.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -40,13 +58,13 @@ The unordered list uses a dash to indicate each item in the list. The dash is th
 
 <DoDontContainer>
   <Do>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/afd68e16-0345-4085-b549-82647ca8136a" />
     <Caption>
       Use the check variant to indicate a list of features that are supported.
     </Caption>
   </Do>
   <Dont>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/7d8ddb4b-1a37-4b7b-a773-1eaeb9027d46" />
     <Caption>
       Don't include mutliple benefits in one single items, split them into
       multiple ones for better readability.
@@ -57,3 +75,6 @@ The unordered list uses a dash to indicate each item in the list. The dash is th
 ## Related components
 
 - [Ordered list](/components/OrderedList): to display a list of plain content items.
+- [Pillar](/components/Pillar): To display related content with less visual emphasis.
+- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
+- [River](/components/River): To display a list of content items with a visual asset.
