Ordered list examples

--- a/apps/docs/content/components/OrderedList/index.mdx
+++ b/apps/docs/content/components/OrderedList/index.mdx
@@ -8,7 +8,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image showing an ordered list with different bullet points.]()
+![An image showing an ordered list with different bullet points.](https://github.com/primer/brand/assets/912236/5cda0c94-c120-4fc6-8306-8b55012dee0a)
 
 ## Usage
 
@@ -16,18 +16,35 @@ Use an ordered list to represent a list of items in a numerical order. Each item
 
 The ordered list is commonly used when presenting sequential or step-by-step information. It is suitable for instructions, procedures, tutorials, or any content that follows a specific order. Ensure that the items in the ordered list are logically organized and follow a clear progression. This helps readers understand the sequence of information and makes it easier to follow.
 
-Avoid overusing ordered lists. Reserve them for situations where the order of items is genuinely meaningful or where a clear sequence needs to be conveyed. For lists that don't require a specific order, consider using an [unordered list](/components/UnorderedList) instead.
-
 <DoDontContainer>
   <Do>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/170e2098-4c9a-41ce-b8de-7b1e1403b3a4" />
     <Caption>Use an ordered list to present a sequence of steps.</Caption>
   </Do>
   <Dont>
-    <img src="" />
+    <img src="https://github.com/primer/brand/assets/912236/6b014079-1939-454a-8d04-d4c432c4b3e1" />
     <Caption>
       Don't use an ordered list to present a list of items that don't require a
-      specific order.
+      specific order. Use an unordered list instead.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
+Avoid overusing ordered lists. Reserve them for situations where the order of items is genuinely meaningful or where a clear sequence needs to be conveyed. For
+lists that don't require a specific order, consider using an [unordered list](/components/UnorderedList) instead.
+
+The ordered list should have conscise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/River), a [card](/components/Card) or a [river](/components/River) instead.
+
+<DoDontContainer>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/16fff4c6-8780-4b00-9e78-f76d9c1d91ea" />
+    <Caption>Use an ordered list for short and concise content items.</Caption>
+  </Do>
+  <Dont>
+    <img src="https://github.com/primer/brand/assets/912236/6a00d6f1-5906-44de-afa9-957485b5bccb" />
+    <Caption>
+      Don't use an ordered list for long and rich sentences, paragraphs,
+      headings or links. Use a pillar, card or river components instead.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -37,3 +54,6 @@ Avoid overusing ordered lists. Reserve them for situations where the order of it
 ## Related components
 
 - [Unordered list](/components/UnorderedList): to display a list of plain content items.
+- [Pillar](/components/Pillar): To display related content with less visual emphasis.
+- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
+- [River](/components/River): To display a list of content items with a visual asset.
