--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -27,7 +27,8 @@ Use the unordered list to effectively provide a quick reference or highlight key
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/8c2399a3-3b1b-4b7a-b917-f14499eefd9d" />
     <Caption>
-      Don't use an unordered list to present a sequence of steps.
+      Don't use an unordered list to present a sequence of steps. Use an ordered
+      list instead.
     </Caption>
   </Dont>
 </DoDontContainer>
