--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -77,5 +77,5 @@ The unordered list uses a dash to indicate each item in the list. The dash is th
 
 - [Ordered list](/components/OrderedList): to display a list of plain content items.
 - [Pillar](/components/Pillar): To display related content with less visual emphasis.
-- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
+- [Card](/components/Card): to display navigational related content with higher visual weight.
 - [River](/components/River): To display a list of content items with a visual asset.
