--- a/apps/docs/content/components/OrderedList/index.mdx
+++ b/apps/docs/content/components/OrderedList/index.mdx
@@ -55,5 +55,5 @@ The ordered list should have conscise and short items. Avoid using long sentence
 
 - [Unordered list](/components/UnorderedList): to display a list of plain content items.
 - [Pillar](/components/Pillar): To display related content with less visual emphasis.
-- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
+- [Card](/components/Card): to display navigational related content with higher visual weight.
 - [River](/components/River): To display a list of content items with a visual asset.
