--- a/apps/docs/content/components/OrderedList/index.mdx
+++ b/apps/docs/content/components/OrderedList/index.mdx
@@ -33,7 +33,7 @@ The ordered list is commonly used when presenting sequential or step-by-step inf
 Avoid overusing ordered lists. Reserve them for situations where the order of items is genuinely meaningful or where a clear sequence needs to be conveyed. For
 lists that don't require a specific order, consider using an [unordered list](/components/UnorderedList) instead.
 
-The ordered list should have conscise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/River), a [card](/components/Card) or a [river](/components/River) instead.
+The ordered list should have conscise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/Pillar), a [card](/components/Card) or a [river](/components/River) instead.
 
 <DoDontContainer>
   <Do>
