--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -33,7 +33,7 @@ Use the unordered list to effectively provide a quick reference or highlight key
   </Dont>
 </DoDontContainer>
 
-The unordered list should have conscise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/River), a [card](/components/Card) or a [river](/components/River) instead.
+The unordered list should have conscise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/Pillar), a [card](/components/Card) or a [river](/components/River) instead.
 
 <DoDontContainer>
   <Do>
