--- a/apps/docs/content/components/OrderedList/index.mdx
+++ b/apps/docs/content/components/OrderedList/index.mdx
@@ -8,7 +8,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image showing an ordered list with different bullet points.](https://github.com/primer/brand/assets/912236/5cda0c94-c120-4fc6-8306-8b55012dee0a)
+![An image showing several sentences as a linear list of numbered items](https://github.com/primer/brand/assets/912236/5cda0c94-c120-4fc6-8306-8b55012dee0a)
 
 ## Usage
 
