--- a/apps/docs/content/components/OrderedList/index.mdx
+++ b/apps/docs/content/components/OrderedList/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Ordered list
-description: Use the ordered list component to render a list of ordered items.
+description: Use the ordered list component to display a list of numbered items.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
