--- a/apps/docs/content/components/OrderedList/index.mdx
+++ b/apps/docs/content/components/OrderedList/index.mdx
@@ -12,7 +12,9 @@ export default ComponentLayout
 
 ## Usage
 
-Use an ordered list to represent a list of items in a numerical order. Each item within the ordered list represents an item that is ordered in a sequence and displays a number to indicate its position in the sequence.
+Use an ordered list to represent a list of items in a numerical order. 
+
+A number indicating the items relative position in the sequence will be prepended to each item in the list.
 
 The ordered list is commonly used when presenting sequential or step-by-step information. It is suitable for instructions, procedures, tutorials, or any content that follows a specific order. Ensure that the items in the ordered list are logically organized and follow a clear progression. This helps readers understand the sequence of information and makes it easier to follow.
 
