--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Unordered list
-description: Use the unordered list component to render a list of unordered items.
+description: Use the unordered list component to present a collection of items without specific ordering.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
