Add role presentation

--- a/apps/docs/content/components/OrderedList/index.mdx
+++ b/apps/docs/content/components/OrderedList/index.mdx
@@ -12,7 +12,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use an ordered list to represent a list of items in a numerical order. 
+Use an ordered list to represent a list of items in a numerical order.
 
 A number indicating the items relative position in the sequence will be prepended to each item in the list.
 
@@ -20,11 +20,17 @@ The ordered list is commonly used when presenting sequential or step-by-step inf
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/170e2098-4c9a-41ce-b8de-7b1e1403b3a4" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/170e2098-4c9a-41ce-b8de-7b1e1403b3a4"
+      role="presentation"
+    />
     <Caption>Use an ordered list to present a sequence of steps.</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/6b014079-1939-454a-8d04-d4c432c4b3e1" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/6b014079-1939-454a-8d04-d4c432c4b3e1"
+      role="presentation"
+    />
     <Caption>
       Don't use an ordered list to present a list of items that don't require a
       specific order. Use an unordered list instead.
@@ -39,11 +45,17 @@ The ordered list should have conscise and short items. Avoid using long sentence
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/16fff4c6-8780-4b00-9e78-f76d9c1d91ea" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/16fff4c6-8780-4b00-9e78-f76d9c1d91ea"
+      role="presentation"
+    />
     <Caption>Use an ordered list for short and concise content items.</Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/6a00d6f1-5906-44de-afa9-957485b5bccb" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/6a00d6f1-5906-44de-afa9-957485b5bccb"
+      role="presentation"
+    />
     <Caption>
       Don't use an ordered list for long and rich sentences, paragraphs,
       headings or links. Use a pillar, card or river components instead.
