--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -18,14 +18,20 @@ Use the unordered list to effectively provide a quick reference or highlight key
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/3893c4f5-2ae8-4ca8-a23f-f76dd02de752" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/3893c4f5-2ae8-4ca8-a23f-f76dd02de752"
+      role="presentation"
+    />
     <Caption>
       Use an unordered list to present and group a list of items that don't
       require a specific order.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/8c2399a3-3b1b-4b7a-b917-f14499eefd9d" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/8c2399a3-3b1b-4b7a-b917-f14499eefd9d"
+      role="presentation"
+    />
     <Caption>
       Don't use an unordered list to present a sequence of steps. Use an ordered
       list instead.
@@ -37,13 +43,19 @@ The unordered list should have conscise and short items. Avoid using long senten
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/e4f81d21-86b9-41dc-9aa5-b4ee17f9ac8d" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/e4f81d21-86b9-41dc-9aa5-b4ee17f9ac8d"
+      role="presentation"
+    />
     <Caption>
       Use an unordered list for short and concise content items.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/b656a10c-4e2f-4600-9a1f-46a1f4cdd98c" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/b656a10c-4e2f-4600-9a1f-46a1f4cdd98c"
+      role="presentation"
+    />
     <Caption>
       Don't use an unordered list for long and rich sentences, paragraphs,
       headings or links. Use a pillar, card or river components instead.
@@ -59,13 +71,19 @@ The unordered list uses a dash to indicate each item in the list. The dash is th
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/afd68e16-0345-4085-b549-82647ca8136a" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/afd68e16-0345-4085-b549-82647ca8136a"
+      role="presentation"
+    />
     <Caption>
       Use the check variant to indicate a list of features that are supported.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/7d8ddb4b-1a37-4b7b-a773-1eaeb9027d46" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/7d8ddb4b-1a37-4b7b-a773-1eaeb9027d46"
+      role="presentation"
+    />
     <Caption>
       Don't include mutliple benefits in one single items, split them into
       multiple ones for better readability.
