--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -20,7 +20,7 @@ Use the unordered list to effectively provide a quick reference or highlight key
   <Do>
     <img
       src="https://github.com/primer/brand/assets/912236/3893c4f5-2ae8-4ca8-a23f-f76dd02de752"
-      role="presentation"
+      alt=""
     />
     <Caption>
       Use an unordered list to present and group a list of items that don't
@@ -30,7 +30,7 @@ Use the unordered list to effectively provide a quick reference or highlight key
   <Dont>
     <img
       src="https://github.com/primer/brand/assets/912236/8c2399a3-3b1b-4b7a-b917-f14499eefd9d"
-      role="presentation"
+      alt=""
     />
     <Caption>
       Don't use an unordered list to present a sequence of steps. Use an ordered
@@ -45,7 +45,7 @@ The unordered list should have conscise and short items. Avoid using long senten
   <Do>
     <img
       src="https://github.com/primer/brand/assets/912236/e4f81d21-86b9-41dc-9aa5-b4ee17f9ac8d"
-      role="presentation"
+      alt=""
     />
     <Caption>
       Use an unordered list for short and concise content items.
@@ -54,7 +54,7 @@ The unordered list should have conscise and short items. Avoid using long senten
   <Dont>
     <img
       src="https://github.com/primer/brand/assets/912236/b656a10c-4e2f-4600-9a1f-46a1f4cdd98c"
-      role="presentation"
+      alt=""
     />
     <Caption>
       Don't use an unordered list for long and rich sentences, paragraphs,
@@ -73,7 +73,7 @@ The unordered list uses a dash to indicate each item in the list. The dash is th
   <Do>
     <img
       src="https://github.com/primer/brand/assets/912236/afd68e16-0345-4085-b549-82647ca8136a"
-      role="presentation"
+      alt=""
     />
     <Caption>
       Use the check variant to indicate a list of features that are supported.
@@ -82,7 +82,7 @@ The unordered list uses a dash to indicate each item in the list. The dash is th
   <Dont>
     <img
       src="https://github.com/primer/brand/assets/912236/7d8ddb4b-1a37-4b7b-a773-1eaeb9027d46"
-      role="presentation"
+      alt=""
     />
     <Caption>
       Don't include mutliple benefits in one single items, split them into
