--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -12,9 +12,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use an unordered list to group related items together. It is suitable for presenting a collection of items that do not require a specific order or ranking. The unordered list provides visual bullet points for each item, which helps to emphasize the individuality of each point and makes it easier for users to scan and comprehend the information.
-
-Use the unordered list to effectively provide a quick reference or highlight key points. This allows users to easily grasp the main ideas or features without having to read lengthy paragraphs.
+Use an unordered list to group related items together. It is suitable for presenting a collection of items that do not require a specific order or ranking. The unordered list provides visual dashes for each item, which helps to emphasize the individuality of each point and makes it easier for users to scan and comprehend the information.
 
 <DoDontContainer>
   <Do>
@@ -38,6 +36,8 @@ Use the unordered list to effectively provide a quick reference or highlight key
     </Caption>
   </Dont>
 </DoDontContainer>
+
+Use the unordered list to effectively provide a quick reference or highlight key points. This allows users to easily grasp the main ideas or features without having to read lengthy paragraphs. For lists that require a linear order, consider using an [ordered list](/components/OrderedList) instead.
 
 The unordered list should have conscise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/Pillar), a [card](/components/Card) or a [river](/components/River) instead.
 
