Image design guidelines

--- a/apps/docs/content/components/Image/react.mdx
+++ b/apps/docs/content/components/Image/react.mdx
@@ -6,6 +6,9 @@ storybook: '/brand/storybook/?path=/story/components-image--playground'
 description: Use Image to create both normal and responsive image elements.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {Label} from '@primer/react'
 
 ```js
