--- a/apps/docs/content/components/OrderedList/index.mdx
+++ b/apps/docs/content/components/OrderedList/index.mdx
@@ -41,7 +41,7 @@ lists that don't require a specific order, consider using an [unordered list](/c
   </Dont>
 </DoDontContainer>
 
-The ordered list should have conscise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/Pillar), a [card](/components/Card) or a [river](/components/River) instead.
+The ordered list should have concise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/Pillar), a [card](/components/Card) or a [river](/components/River) instead.
 
 <DoDontContainer>
   <Do>
