--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -39,7 +39,7 @@ Use an unordered list to group related items together. It is suitable for presen
 
 Use the unordered list to effectively provide a quick reference or highlight key points. This allows users to easily grasp the main ideas or features without having to read lengthy paragraphs. For lists that require a linear order, consider using an [ordered list](/components/OrderedList) instead.
 
-The unordered list should have conscise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/Pillar), a [card](/components/Card) or a [river](/components/River) instead.
+The unordered list should have concise and short items. Avoid using long sentences or paragraphs as they can be difficult to scan and comprehend. If you need to include a long item or even headings and links, consider using a [pillar](/components/Pillar), a [card](/components/Card) or a [river](/components/River) instead.
 
 <DoDontContainer>
   <Do>
