--- a/apps/docs/content/components/Prose.mdx
+++ b/apps/docs/content/components/Prose.mdx
@@ -85,8 +85,8 @@ import {Prose} from '@primer/react-brand'
 
 ### Prose
 
-| Name              | Type      | Default | Description                                                        |
-| :---------------- | :-------- | :-----: | :----------------------------------------------------------------- |
-| `className`       | `string`  |         | Sets a custom class on the root element                            |
-| `rawHtmlMarkup`   | `string`  |         | Content to be displayed within the Prose component                 |
-| `enableFullWidth` | `boolean` | `false` | A toggle to remove the default max-width if required by the design |
+| Name              | Type      | Default | Required | Description                                        |
+| :---------------- | :-------- | :-----: | :------- | -------------------------------------------------- |
+| `rawHtmlMarkup`   | `string`  |         | `true`   | Content to be displayed within the Prose component |
+| `enableFullWidth` | `boolean` | `false` |          | A toggle to remove the default max-width           |
+| `className`       | `string`  |         |          | Sets a custom class on the root element            |
