Added note to docs

--- a/apps/docs/content/components/Prose.mdx
+++ b/apps/docs/content/components/Prose.mdx
@@ -12,6 +12,12 @@ import {Prose} from '@primer/react-brand'
 
 ## Examples
 
+<Note>
+
+`Prose` is designed to take sanitized HTML as a string and render it with Primer Brand styles. It is not intended to be used with JSX. The `Prose` component doens't sanitize the data internally. It is the responsibility of the consumer to sanitize the data before passing it to the component.
+
+</Note>
+
 ### Default
 
 ```jsx live
