--- a/apps/docs/content/components/Image/index.mdx
+++ b/apps/docs/content/components/Image/index.mdx
@@ -6,20 +6,27 @@ description: Use an image  to display a graphical representation.
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
-![An image showing an image component.]()
-
 ## Usage
 
 Use an image to display a graphical representation, such as a photograph or a visual illustration, on a web page. Use it in combination with text to provide context or additional information.
 
 <DoDontContainer>
   <Do>
-    <img src="" alt="" />
-    <Caption></Caption>
+    <img
+      src="https://github.com/primer/brand/assets/912236/3ffc80cb-4d7d-4ef4-b66f-10e902d8f17c"
+      alt=""
+    />
+    <Caption>
+      Use an image to display a photograph in combination with descriptive text
+      to provide context.
+    </Caption>
   </Do>
   <Dont>
-    <img src="" alt="" />
-    <Caption></Caption>
+    <img
+      src="https://github.com/primer/brand/assets/912236/6f29d849-9379-4327-a4aa-e1233e19861b"
+      alt=""
+    />
+    <Caption>Don't use an icon as an image or illustration.</Caption>
   </Dont>
 </DoDontContainer>
 
@@ -33,12 +40,20 @@ Choose the appropriate dimensions for the image to fit the desired layout, eithe
 
 <DoDontContainer>
   <Do>
-    <img src="" alt="" />
-    <Caption></Caption>
+    <img
+      src="https://github.com/primer/brand/assets/912236/7e9cf19c-1545-4b47-9ac8-0442050eb509"
+      alt=""
+    />
+    <Caption>
+      In a list or group, use images of the same size and aspect ratio.
+    </Caption>
   </Do>
   <Dont>
-    <img src="" alt="" />
-    <Caption></Caption>
+    <img
+      src="https://github.com/primer/brand/assets/912236/6efc49d3-f982-4f9f-9951-413a05f329cc"
+      alt=""
+    />
+    <Caption>Don't use images of different sizes in the same section.</Caption>
   </Dont>
 </DoDontContainer>
 
