--- a/apps/docs/content/components/Prose.mdx
+++ b/apps/docs/content/components/Prose.mdx
@@ -3,7 +3,7 @@ title: Prose
 status: Experimental
 source: https://github.com/primer/brand/blob/main/packages/react/src/Prose/Prose.tsx
 storybook: '/brand/storybook/?path=/story/components-prose--default'
-description: Use the Prose component to render html content with Primer Brand styles.
+description: Use Prose to apply Primer Brand styles to HTML markup
 ---
 
 ```js
