--- a/apps/docs/content/components/Image/index.mdx
+++ b/apps/docs/content/components/Image/index.mdx
@@ -57,7 +57,7 @@ Choose the appropriate dimensions for the image to fit the desired layout, eithe
 
 ## Accessibility
 
-Use the `alt` attribute to provide alternative text that is displayed if the image cannot be loaded or for accessibility purposes. It is important to include descriptive alternative text that conveys the meaning or content of the image. For more info, see [Alternative text for images](https://primer.style/design/guides/accessibility/alternative-text-for-images).
+Use the `alt` attribute to provide alternative text that is displayed if the image cannot be loaded or for accessibility purposes. It is important to include descriptive alternative text that conveys the meaning or content of the image. For more info, see [alternative text for images](https://primer.style/design/guides/accessibility/alternative-text-for-images).
 
 Optimize your images for web to reduce file size without compromising quality. Smaller file sizes improve page loading speed.
 
