--- a/apps/docs/content/components/Image/index.mdx
+++ b/apps/docs/content/components/Image/index.mdx
@@ -34,7 +34,7 @@ Use an image to display a graphical representation, such as a photograph or a vi
 
 ### Size
 
-Choose the appropriate dimensions for the image to fit the desired layout, either by using `widht/height` or the `aspect-ratio` properties. Avoid using images that are too large or too small for their intended display. When using images in a list, make sure they are all the same size to achieve a visually balanced layout.
+Choose the appropriate dimensions for the image to fit the desired layout using the `widht/height` or the `aspect-ratio` properties. Avoid using images that are too large or too small for their intended display. When using images in a list, make sure they are all the same size to achieve a visually balanced layout.
 
 <DoDontContainer>
   <Do>
