--- a/apps/docs/content/components/Image/index.mdx
+++ b/apps/docs/content/components/Image/index.mdx
@@ -36,7 +36,7 @@ Use an image to display a graphical representation, such as a photograph or a vi
 
 Choose the appropriate dimensions for the image to fit the desired layout using the `widht/height` or the `aspect-ratio` properties. Avoid using images that are too large or too small for their intended display. When using images in a list, make sure they are all the same size to achieve a visually balanced layout.
 
-<DoDontContainer>
+<DoDontContainer stacked>
   <Do>
     <img
       src="https://github.com/primer/brand/assets/912236/7e9cf19c-1545-4b47-9ac8-0442050eb509"
